deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiosk-ingress
  namespace: kiosk-screen
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: my-traefik
  rules:
    - host: kiosk.rromani.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kiosk-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiosk-frontend
                port:
                  number: 80
